[package]
name = "save-migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
dirs = "6.0"
flate2 = "1.1"
keyvalues-parser = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
ratatui = "0.30"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
strip = true
panic = "abort"
